hphp/hack/doc/hack-langspec/tests/Classes/Closure_call.php.expectf

Fatal error: HH mode: content before <?hh (Line: 1, Char: 44)
syntax error, unexpected T_HH_ERROR, expecting $end in %s/tests/Classes/Closure_call.php on line 1